# f

./: .gitignore  Cargo.toml  README.md  TODO.md  colors.toml  gallery.md  gen_dir.py
src/: conf.rs  consts.rs  ftype.rs  history.rs  init.rs  main.rs  os_release.rs  recycle_bin.rs  traits.rs  tui.rs  tui_new.rs  utils.rs
src/tui/: colors.rs  current_dir.rs  files.rs
